---
source: spade-tests/src/affine_check.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Unused affine item
  ┌─ testinput:1:10
  │
1 │ entity x(resource: &mut bool) -> bool {
  │          ^^^^^^^^ This must be used
  │
  = Required because it is of type &mut


